# cargo-cocoapods

./: Cargo.toml  LICENSE-MIT  README.md
src/: cargo.rs  cli.rs  cmd.rs  main.rs  meta.rs  podspec.rs
