[package]
name = "cargo-cocoapods"
version = "0.2.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
repository = "https://github.com/bbqsrc/cargo-cocoapods"
documentation = "https://docs.rs/cargo-cocoapods"
homepage = "https://github.com/bbqsrc/cargo-cocoapods"
license = "Apache-2.0 OR MIT"
description = "Generate a Cocoapods wrapper for your Rust project"
keywords = ["ios", "cargo", "cocoapods", "swift", "apple"]
categories = [
    "command-line-utilities",
    "config",
    "os",
    "development-tools::cargo-plugins",
    "development-tools::build-utils"
]
edition = "2021"
rust-version = "1.56.0"

[[bin]]
name = "cargo-pod"
path = "src/main.rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
gumdrop = "0.8.0"
toml = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }
pathos = "0.3.0-pre.4"
env_logger = "0.7.1"
log = "0.4.11"
cargo_metadata = "0.10.0"
indexmap = "1.6.2"
regex = "1.4.5"
regex_static = "0.1.1"
once_cell = "1.7.2"
heck = "0.3.2"
globset = "0.4.6"
serde_json = "1.0.64"
